<resources>
    <string name="app_name">Math Calc</string>
    <string name="tvDisplay"></string>
    <string name="tvvarnumadd"></string>
    <string name="btnclear">clear</string>
    <string name="btndelete">DEL</string>
    <string name="btndecimal">.</string>
    <string name="btndivide">/</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnmultiply">x</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnsubtract">-</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnadd">+</string>
    <string name="btnnegitive">-</string>
    <string name="btn0">0</string>
    <string name="btnequals">=</string>
</resources>
