<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="373dp"
        android:layout_height="77dp"
        android:text="@string/tvDisplay"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/tvvarnumadd"
        android:layout_width="150dp"
        android:layout_height="13dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginTop="492dp"
        android:text="@string/tvvarnumadd"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnclear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btndelete"
        app:layout_constraintLeft_toRightOf="@+id/btnclear"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btndecimal"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btndecimal"
        app:layout_constraintLeft_toRightOf="@+id/btndelete"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btndivide"
        app:layout_constraintLeft_toRightOf="@+id/btndecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnclear" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn2"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btndelete" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn3"
        app:layout_constraintLeft_toRightOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btndecimal" />

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="X"
        app:layout_constraintLeft_toRightOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btndivide"
        tools:text="@string/btnmultiply" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn5"
        app:layout_constraintLeft_toRightOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="6"
        app:layout_constraintLeft_toRightOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        tools:text="@string/btn6" />

    <Button
        android:id="@+id/btnsubtract"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnsubtract"
        app:layout_constraintLeft_toRightOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnmultiply" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn8"
        app:layout_constraintLeft_toRightOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn9"
        app:layout_constraintLeft_toRightOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnadd"
        app:layout_constraintLeft_toRightOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnsubtract" />

    <Button
        android:id="@+id/btnnegitive"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnnegitive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn0"
        app:layout_constraintLeft_toRightOf="@+id/btnnegitive"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnequals"
        android:layout_width="186dp"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnequals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btnadd"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>